# stock-sentiment-analysis

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.dashboard  Makefile  README.md  app.py  data_collector.py  pyproject.toml  rag_service.py  redis_cache.py  requirements.txt  sentiment_analyzer.py
.github/workflows/: build-and-push-ghcr.yml
docs/: ARCHITECTURE.md  diagrams_v2.mmd  generate_diagrams.sh  generate_docs_diagrams.sh  index.md
docs/diagrams/: mermaid_config.json  mermaid_diagrams_source.md
manifests/: sentiment-service-deploy.yaml
scripts/: README.md  add-embedding-model.sh  generate_diagrams.py  generate_diagrams.sh  setup-azure-ai-search.sh  setup-azure-openai.sh  setup-azure-redis.sh
src/stock_sentiment/: app.py
src/stock_sentiment/api/: main.py
src/stock_sentiment/api/models/: response.py
src/stock_sentiment/api/routes/: cache.py  sentiment.py
src/stock_sentiment/config/: settings.py
src/stock_sentiment/models/: __init__.py  sentiment.py  stock.py
src/stock_sentiment/presentation/: api_client.py  data_loader.py  initialization.py
src/stock_sentiment/presentation/components/: sidebar.py
src/stock_sentiment/presentation/tabs/: comparison_tab.py  price_analysis_tab.py  technical_analysis_tab.py
src/stock_sentiment/services/: __init__.py  ab_testing.py  cache.py  collector.py  cost_tracker.py  message_queue.py  multi_tier_cache.py  orchestrator.py  rag.py  reranker.py  sentiment.py  vector_db.py
src/stock_sentiment/utils/: __init__.py  logger.py
